force-app/main/default/objects/Project__c/fields/Booked_Units__c.field-meta.xml
<CustomField>
    <fullName>Booked_Units__c</fullName>
    <label>Booked Units</label>
    <summaryFilterItems>
        <field>Unit__c.Status__c</field>
        <operation>equals</operation>
        <value>Booked</value>
    </summaryFilterItems>
    <summaryForeignKey>Unit__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>