force-app/main/default/objects/Project__c/fields/CP_Commission_Pct__c.field-meta.xml
<CustomField>
    <fullName>CP_Commission_Pct__c</fullName>
    <label>CP Commission %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>