force-app/main/default/objects/Project__c/fields/CRM_Head__c.field-meta.xml
<CustomField>
    <fullName>CRM_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRM Head</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>CRM Head Projects</relationshipLabel>
    <relationshipName>CRM_Head_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>