force-app/main/default/objects/Project__c/fields/CRM_Manager__c.field-meta.xml
<CustomField>
    <fullName>CRM_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRM Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>