force-app/main/default/objects/Project__c/fields/CS_Executive__c.field-meta.xml
<CustomField>
    <fullName>CS_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default complaint owner</description>
    <label>CS Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>CS Executive Projects</relationshipLabel>
    <relationshipName>CS_Executive_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>