force-app/main/default/objects/Project__c/fields/Customer_Service_Executive__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default Customer Service Executive for this project. Complaints from website will be assigned to this user.</description>
    <inlineHelpText>Customer Service Executive for complaint assignment</inlineHelpText>
    <label>Customer Service Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects_As_CS_Executive</relationshipName>
    <type>Lookup</type>
</CustomField>