force-app/main/default/objects/Project__c/fields/Demand_Due_Days__c.field-meta.xml
<CustomField>
    <fullName>Demand_Due_Days__c</fullName>
    <description>Days from demand raised to due date</description>
    <label>Demand Due Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>