force-app/main/default/objects/Project__c/fields/DLP_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>DLP_Period_Days__c</fullName>
    <defaultValue>365</defaultValue>
    <label>DLP Period Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>