force-app/main/default/objects/Project__c/fields/Enable_Auto_Unit_Unblocking__c.field-meta.xml
<CustomField>
    <fullName>Enable_Auto_Unit_Unblocking__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable or disable automatic unit unblocking when customer does not pay within the configured days. When enabled, booking will be cancelled and unit status changed to Available.</description>
    <inlineHelpText>Enable automatic unit unblocking after non-payment</inlineHelpText>
    <label>Enable Auto Unit Unblocking</label>
    <type>Checkbox</type>
</CustomField>