force-app/main/default/objects/Project__c/fields/Enable_Reminder_1__c.field-meta.xml
<CustomField>
    <fullName>Enable_Reminder_1__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable or disable 1st demand reminder for this project.</description>
    <inlineHelpText>Enable 1st demand reminder</inlineHelpText>
    <label>Enable 1st Reminder</label>
    <type>Checkbox</type>
</CustomField>