force-app/main/default/objects/Project__c/fields/Enable_Reminder_2__c.field-meta.xml
<CustomField>
    <fullName>Enable_Reminder_2__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable or disable 2nd demand reminder for this project.</description>
    <inlineHelpText>Enable 2nd demand reminder</inlineHelpText>
    <label>Enable 2nd Reminder</label>
    <type>Checkbox</type>
</CustomField>