force-app/main/default/objects/Project__c/fields/Enable_Reminder_3__c.field-meta.xml
<CustomField>
    <fullName>Enable_Reminder_3__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable or disable 3rd demand reminder for this project.</description>
    <inlineHelpText>Enable 3rd demand reminder</inlineHelpText>
    <label>Enable 3rd Reminder</label>
    <type>Checkbox</type>
</CustomField>