force-app/main/default/objects/Project__c/fields/Enable_Termination_Mail__c.field-meta.xml
<CustomField>
    <fullName>Enable_Termination_Mail__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable or disable termination mail with interest for this project.</description>
    <inlineHelpText>Enable termination mail with interest amount</inlineHelpText>
    <label>Enable Termination Mail</label>
    <type>Checkbox</type>
</CustomField>