force-app/main/default/objects/Project__c/fields/Escalation_Email_Time__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Email_Time__c</fullName>
    <defaultValue>&quot;10:00&quot;</defaultValue>
    <description>Time of day (HH:MM format) when escalation emails should be sent for overdue snags and complaints.</description>
    <inlineHelpText>Time for daily escalation emails (default 10:00 AM)</inlineHelpText>
    <label>Escalation Email Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>