force-app/main/default/objects/Project__c/fields/Grace_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Grace_Period_Days__c</fullName>
    <description>Grace days before interest accrues</description>
    <label>Grace Period Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>