force-app/main/default/objects/Project__c/fields/Include_Interest_In_Termination__c.field-meta.xml
<CustomField>
    <fullName>Include_Interest_In_Termination__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether to include calculated interest amount in the termination mail.</description>
    <inlineHelpText>Include interest amount in termination mail</inlineHelpText>
    <label>Include Interest in Termination</label>
    <type>Checkbox</type>
</CustomField>