force-app/main/default/objects/Project__c/fields/Inspection_Person__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection Person</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Inspection Person Projects</relationshipLabel>
    <relationshipName>Inspection_Person_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>