force-app/main/default/objects/Project__c/fields/Legal_User__c.field-meta.xml
<CustomField>
    <fullName>Legal_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Legal User Projects</relationshipLabel>
    <relationshipName>Legal_User_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>