force-app/main/default/objects/Project__c/fields/Max_Block_Days__c.field-meta.xml
<CustomField>
    <fullName>Max_Block_Days__c</fullName>
    <description>Auto-unblock days for blocked units</description>
    <label>Max Block Days</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>