force-app/main/default/objects/Project__c/fields/Min_Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Min_Booking_Amount__c</fullName>
    <label>Minimum Booking Amount</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>