force-app/main/default/objects/Project__c/fields/Parent_Project__c.field-meta.xml
<CustomField>
    <fullName>Parent_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent project for tower hierarchy. If set, this project is a tower/wing under the parent project.</description>
    <label>Parent Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Towers</relationshipLabel>
    <relationshipName>Towers</relationshipName>
    <type>Lookup</type>
</CustomField>