force-app/main/default/objects/Project__c/fields/Project_Head__c.field-meta.xml
<CustomField>
    <fullName>Project_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Project Head user for escalation emails and approvals.</description>
    <inlineHelpText>Project Head for escalations and approvals</inlineHelpText>
    <label>Project Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects_As_Head</relationshipName>
    <type>Lookup</type>
</CustomField>