force-app/main/default/objects/Project__c/fields/Quote_Calculation_Logic__c.field-meta.xml
<CustomField>
    <fullName>Quote_Calculation_Logic__c</fullName>
    <label>Quote Calculation Logic</label>
    <type>TextArea</type>
</CustomField>