force-app/main/default/objects/Project__c/fields/Reminder1_Offset__c.field-meta.xml
<CustomField>
    <fullName>Reminder1_Offset__c</fullName>
    <label>1st Reminder Offset Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>