force-app/main/default/objects/Project__c/fields/Reminder_1_Days__c.field-meta.xml
<CustomField>
    <fullName>Reminder_1_Days__c</fullName>
    <defaultValue>7</defaultValue>
    <description>Number of days after demand raised to send 1st reminder. Set to 0 or blank to disable.</description>
    <inlineHelpText>Days after demand raised for 1st reminder (default 7). Set 0 to disable.</inlineHelpText>
    <label>1st Reminder Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>