force-app/main/default/objects/Project__c/fields/Reminder_2_Days__c.field-meta.xml
<CustomField>
    <fullName>Reminder_2_Days__c</fullName>
    <defaultValue>14</defaultValue>
    <description>Number of days after demand raised to send 2nd reminder. Set to 0 or blank to disable.</description>
    <inlineHelpText>Days after demand raised for 2nd reminder (default 14). Set 0 to disable.</inlineHelpText>
    <label>2nd Reminder Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>