force-app/main/default/objects/Project__c/fields/Reminder_3_Days__c.field-meta.xml
<CustomField>
    <fullName>Reminder_3_Days__c</fullName>
    <defaultValue>21</defaultValue>
    <description>Number of days after demand raised to send 3rd reminder. Set to 0 or blank to disable.</description>
    <inlineHelpText>Days after demand raised for 3rd reminder (default 21). Set 0 to disable.</inlineHelpText>
    <label>3rd Reminder Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>