force-app/main/default/objects/Project__c/fields/Reminder_Days__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Days__c</fullName>
    <label>Reminder Days</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>