force-app/main/default/objects/Project__c/fields/Termination_Mail_Days__c.field-meta.xml
<CustomField>
    <fullName>Termination_Mail_Days__c</fullName>
    <defaultValue>21</defaultValue>
    <description>Number of days after demand raised to send termination mail with interest amount. Set to 0 or blank to disable.</description>
    <inlineHelpText>Days after demand raised for termination mail (default 21). Set 0 to disable.</inlineHelpText>
    <label>Termination Mail Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>