force-app/main/default/objects/Project__c/fields/Termination_Offset__c.field-meta.xml
<CustomField>
    <fullName>Termination_Offset__c</fullName>
    <label>Termination Offset Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>