force-app/main/default/objects/Project__c/fields/Unit_Unblocking_Days__c.field-meta.xml
<CustomField>
    <fullName>Unit_Unblocking_Days__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Number of days after demand raised for automatic unit unblocking. Set to 0 or blank to disable.</description>
    <inlineHelpText>Days after demand raised for auto unit unblocking (default 30). Set 0 to disable.</inlineHelpText>
    <label>Unit Unblocking Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>